# textes

./: Makefile  README.md  builder.py  cnll-bullet-points.md  pyproject.toml
src/: cp-cnll-cra-sept-2023.md  etude-cra-sept-2023.md
styles/: cnll-pressrelease.typ  cnll-report.typ
