[project]
name = "cnll-texts"
version = "0.1.0"
description = "Textes du CNLL (communiqués, études...)"
authors = [
    { name = "Stefane Fermigier", email = "sf@fermigier.com" }
]
dependencies = [
    "cleez~=0.1.11",
    "devtools>=0.12.2",
    "setuptools>=68.1.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
